update rockstar speakers GDEs

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@ permalink: /
 
  {% include statistic.html %}
 
+ {% include latest-news.html %}
+
+ {% include rockstar-speakers.html %}
+
  {% include location-map.html %}
 
  {% include venue.html %}
 
- {% include rockstar-speakers.html %}
+ {% include media.html %}
  
  {% include twitter-feed.html %}
 
